[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Fonts/ThaleahFat.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/Fonts/Bigger.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/Fonts/Smaller.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/Player/walk cycle.png" type="Texture" id=5]
[ext_resource path="res://assets/MainMenu/wasd.png" type="Texture" id=6]
[ext_resource path="res://assets/MainMenu/arrow.png" type="Texture" id=7]
[ext_resource path="res://assets/Fonts/EvenSmaller.tres" type="DynamicFont" id=8]

[sub_resource type="Animation" id=1]
resource_name = "PlayerWalk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerAnim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="playerAnim" type="Sprite" parent="."]
position = Vector2( 238.082, 29.9292 )
scale = Vector2( 1.28374, 1.09503 )
texture = ExtResource( 5 )
hframes = 20

[node name="Title" type="Label" parent="."]
margin_left = 68.771
margin_top = 17.4137
margin_right = 219.771
margin_bottom = 45.4137
custom_fonts/font = ExtResource( 2 )
text = "Microbform"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="MainPanel"]
modulate = Color( 0, 1, 0.976471, 1 )
margin_left = 96.2373
margin_top = 59.9932
margin_right = 224.237
margin_bottom = 78.9932
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="MainPanel"]
modulate = Color( 0, 1, 0.976471, 1 )
margin_left = 96.2373
margin_top = 90.334
margin_right = 224.237
margin_bottom = 109.334
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsMenu" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsText" type="RichTextLabel" parent="CreditsMenu"]
margin_left = 40.0
margin_top = 46.0
margin_right = 280.0
margin_bottom = 146.0
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
text = "Developers:
  - Teo Kai Xiang
  - Lien Cai ting
  - Grace zhu
  - dinh thao vy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsBack" type="Button" parent="CreditsMenu"]
modulate = Color( 0, 1, 0.976471, 1 )
margin_left = 96.2373
margin_top = 146.0
margin_right = 229.237
margin_bottom = 170.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "back to main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "PlayerWalk"
anims/PlayerWalk = SubResource( 1 )

[node name="Instructions" type="Control" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 283.0
margin_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Instructions"]
margin_left = -8.22725
margin_top = 6.0
margin_right = 235.773
margin_bottom = 66.0
rect_scale = Vector2( 1.00715, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Welcome to MICROBFORM! 
You will be playing as someone who has anxiety navigating daily life events.

The game consists of 3 rooms each with an event. you may use \"skip room\" if you are in a rush"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Instructions"]
margin_left = -12.2272
margin_top = 59.0
margin_right = 75.7728
margin_bottom = 73.0
custom_fonts/font = ExtResource( 1 )
text = "instructions:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Instructions"]
margin_left = 194.661
margin_top = 93.8337
margin_right = 234.661
margin_bottom = 107.834
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Instructions"]
margin_left = 43.29
margin_top = 84.2432
margin_right = 187.29
margin_bottom = 97.2432
custom_fonts/font = ExtResource( 4 )
text = "WASD or arrow keys to move"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wasd" type="Sprite" parent="Instructions"]
position = Vector2( 19.795, 88.8468 )
scale = Vector2( 0.0551152, 0.054112 )
texture = ExtResource( 6 )

[node name="ready" type="Button" parent="Instructions"]
modulate = Color( 0, 1, 0.976471, 1 )
margin_left = 47.8536
margin_top = 107.834
margin_right = 175.854
margin_bottom = 126.834
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "i'm ready!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow" type="Sprite" parent="Instructions"]
position = Vector2( 212.338, 88.9062 )
scale = Vector2( 0.0657461, 0.0569403 )
texture = ExtResource( 7 )

[connection signal="pressed" from="MainPanel/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MainPanel/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CreditsMenu/CreditsBack" to="." method="_on_CreditsBack_pressed"]
[connection signal="pressed" from="Instructions/ready" to="." method="_on_ready_pressed"]
